@@ -2,6 +2,8 @@
     Checks & Agents:
     * 4104 veeam_tapejobs: New check to monitor Veeam tape jobs
     * 4170 local: local check is now clusteraware. Best or worst state in cluster mode can be configured...
+    * 4005 agent_activemq: now able to provide BasicAuth credentials...
+            NOTE: Please refer to the migration notes!
     * 4171 FIX: perle_psmu: fixed value error...
     * 4172 FIX: smart.temp: fixed discovery and check function...
     * 4173 FIX: if.include: ignore some more keys in 'Network interfaces and switch ports' rule which are only used for interface grouping
